--- a/tmux/tmuxinator.symlink/wal.yml
+++ b/tmux/tmuxinator.symlink/wal.yml
@@ -1,6 +1,7 @@
-name: grom
-root: ~/projects/web_sites/gromit
+name: wal
+root: ~/projects/web_sites/wallace
 pre: git pull
 windows:
   - shell: 
   - angular_server: cd html-app && grunt server
+  - mongo: mongod
