--- a/tmux/tmuxinator.symlink/can.yml
+++ b/tmux/tmuxinator.symlink/can.yml
@@ -3,7 +3,7 @@ root: ~/projects/web_sites/canvas
 pre: git pull
 windows:
   - shell: 
-  - grunt: rvm use 1.9.3-p392 && grunt serve
+  - grunt: grunt serve
   - seneca: node node_modules/seneca/server.js config/config_dev.json
   - skeuos: cd ../skeuos-server && rails s
   
