--- a/tmux/tmuxinator.symlink/hera.yml
+++ b/tmux/tmuxinator.symlink/hera.yml
@@ -4,5 +4,5 @@ pre: git pull && mysql.server start
 windows:
   - shell: 
   - rails_console: rails c
-  - rails_server: rails s 
+  - rails_server: rails s -p 8020
   
